--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,27 @@ body {
   height: 200px;
   border-radius: 15px;
 }
+
+
+.section3 {
+  background-color: #E5E7EB;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.quote {
+  width: 900px;
+  font-size: 36px;
+  color:#1f2937cb;
+  font-weight: normal;
+  font-style: italic;
+  padding-left: 25px;
+}
+
+.thor {
+   margin-left: 550px;
+  font-weight: bolder;
+}
