--- a/styles.css
+++ b/styles.css
@@ -131,3 +131,58 @@ body {
    margin-left: 550px;
   font-weight: bolder;
 }
+
+.section4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+}
+
+.section4-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.section4-jagaban {
+  display: flex;
+  width: 800px;
+  height: 100px;
+  border-radius: 8px;
+  background-color: #3882F6;
+  justify-content: space-between;
+  align-items: center;
+  color:#F9FAF8;
+}
+
+.call {
+  font-weight: bolder;
+  font-size: 20px;
+  margin-bottom: 3px;
+}
+
+.product {
+  color:#f9faf8bd;
+}
+
+.section4-containera {
+  padding-left: 100px;
+}
+
+.section4-containerb {
+  padding-right: 100px;
+}
+
+.section4-button {
+  width: 95px;
+  height: 30px;
+  border-radius: 12px;
+  background-color: #3882F6;
+  color: #F9FAF8;
+  font-weight: bolder;
+  border-style: solid;
+  border-color: #F9FAF8;
+}
